hollow out copy of gotp into updo skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -83,8 +83,17 @@ fabric.properties
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-
 ### Custom
 
 # Private notes
 LOCAL-NOTES.md
+
+# Binaries
+updo
+
+# Finder junk
+.DS_Store
+**/.DS_Store
+
+# Release assets
+release/
